// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search .itemSearchResultsResolver returns the expected result 1`] = `
{
  "edges": [
    {
      "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
      "node": {
        "combinations": [],
        "creates": [],
        "imageUrl": "https://picsum.photos/48",
        "myths": false,
        "name": "test",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjA=",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
  },
}
`;

exports[`search .searchResultsResolver with no results returns the expected result 1`] = `
{
  "message": "No results matched test",
}
`;

exports[`search .searchResultsResolver with results returns the expected result 1`] = `
{
  "items": [
    {
      "combinations": [],
      "creates": [],
      "imageUrl": "https://picsum.photos/48",
      "myths": false,
      "name": "test",
    },
  ],
}
`;
